Fix mobile spacing

--- a/src/assets/scss/common/_site.scss
+++ b/src/assets/scss/common/_site.scss
@@ -722,6 +722,16 @@
         .grid-item{
             width: 100%;
         }
+
+        .jumbotron h1{
+            padding-top: 50px;
+        }
+
+        .navbar-header{
+            padding-bottom: 5px;
+        }
+
+
         #menu-header-menu{
 
             .menu-item{
